[GraemeO] Update README to fix JVM arguments for garbage collection logging